<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VendorProfileActivity">

    <TextView android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Profile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:layout_margin="10dp"
        />

    <ImageView
        android:id="@+id/userPicIcon"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv"
        app:srcCompat="@drawable/profile1" />

    <ImageButton
        android:id="@+id/btnSelectUserImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="-16dp"
        android:layout_marginBottom="-16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/userPicIcon"
        app:layout_constraintEnd_toEndOf="@+id/userPicIcon"
        app:srcCompat="@drawable/cameraicon" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_margin="3dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#D3D3D3"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userPicIcon"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPicIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:text=""/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPersonName"
            android:text=""/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterMaxLength="11"
        android:layout_marginTop="15dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="number"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/merchantNameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/merchant_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/merchantNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="text"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rentalCodeContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="5"
        android:layout_marginTop="15dp"
        android:hint="@string/rental_code_canteen_vendor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/merchantNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rentalCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="number"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="Update"
        android:textStyle="bold"
        android:layout_margin="3dp"
        app:layout_constraintTop_toBottomOf="@+id/rentalCodeContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>